Optimize evaluation context invalidation